try make am faster